--- a/enigme.css
+++ b/enigme.css
@@ -99,3 +99,83 @@ nav ul li a:hover{
 .logo:hover{
     color: var(--violet--);
 }
+
+/*section un*/
+h1{
+    color: var(--violet--);
+    font-size: 50px ;
+}
+img{
+    height: 80%;
+    width: 50% 40%;
+}
+
+
+.container .diva{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.div2{
+    background-image: url(./Assets/Enigme/);
+    height: 80%;
+    width: 50%;
+}
+
+/*La section deux*/
+.div1{
+color: var(--violet--);
+}
+  
+.container .diver{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    text-align: left;
+
+}
+
+.diver{
+    background-image: url(./Assets/Enigme/Pantherenigme2.png);
+    height: 100px;
+    width: 50%;
+    background-repeat: no repeat;
+    text-align:justify;
+}
+
+input{
+    background: linear-gradient(
+        80deg, var(--white--), var(--pink-light--)
+     ) ;
+    border-color: var(--pink-light--);
+    border-width: 1px;
+    border-radius: 20px;
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(5px);
+    -moz-backdrop-filter: blur(5px);
+    padding: 1rem;
+    width: 200px;
+    margin-bottom: 2px;
+}
+::placeholder{
+    color: var(--pink-light--);
+}
+
+input [button]{
+    cursor: pointer;
+    margin-top: 10px;
+    font-size: 1rem;
+    width: 150px;
+    background: var(--pink--);
+}
+ /* Footer */
+ footer{
+    margin-top: 162px;
+    background: url(./Assets/All\ pages/back_footer.png);
+    display: flex;
+    justify-content: center;
+    align-items: center ;
+    flex-direction: column;
+ }
+    
